adapted biomart and non-coding SNPs for the SNP IDs collected from ensembl

--- a/cisreg_GWAS/cisreg-GWAS.Rmd
+++ b/cisreg_GWAS/cisreg-GWAS.Rmd
@@ -539,6 +539,10 @@ write.table(x = nonCoding,
             sep = "\t",
             row.names = FALSE,
             col.names = TRUE)
+
+# Make a non-coding variant bed file
+
+
 ```
 
 
